# poetry-exemplar

./: README.md
poetry-exemplar/: pyproject.toml
poetry-exemplar/poetry_exemplar/: add_one.py
poetry-exemplar/tests/: test_poetry_exemplar.py
