[tool.poetry]
name = "poetry-exemplar"
version = "0.1.0"
description = ""
authors = ["jordantoaster <jordanmcdonaldmain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.7"
pandas = "^1.0.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
